<resources>
    <string name="app_name">RealTime crud app</string>
    <string name="add_new_user">ADD NEW USER</string>
    <string name="user_name">User name</string>
    <string name="add">Add</string>
    <string name="exit">Exit</string>
    <string name="user_email">User email</string>
    <string name="user_country">User Country</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no_exit">No, Exit</string>
</resources>